--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 			  </form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" width="175" height="200" alt="appareil photo">
+			<img src="./assets/images/camera.png" alt="appareil photo">
 		</div>
 	</div>
 </div>
