--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>Nina Carducci</title>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:title" content="Nina Carducci">
+	<meta property="og:description" content="Service de photographie">
+	<meta property="og:url" content="https://scottx2023.github.io/Projet-9/">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
